--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "main": "build/node/luxon.js",
   "module": "src/luxon.js",
+  "type": "module",
   "browser": "build/cjs-browser/luxon.js",
   "jsdelivr": "build/global/luxon.min.js",
   "unpkg": "build/global/luxon.min.js",
